[package]
name = "spherical-separator"
version = "0.1.0"
description = "Spherical Video Camera Extractor"
authors = ["you"]
edition = "2021"

[lib]
name = "spherical_separator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "spherical-separator"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
base64 = "0.22"
anyhow = "1"
ffmpeg-next = "8"
glam = "0.29"
